remove screenshot link

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
                   <img src="./assets/img/food.jpg" style="width: 149px;">
-                  <img src="./assets/img/food1.jpg" style="width: 149px;">
+                  <!-- <img src="./assets/img/food1.jpg" style="width: 149px;"> -->
                 </section>
                   <section
                     class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
