Increae images height

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <section
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
-                    <img src="./assets/img/bookstor1.jpg" style="width: 149px;">
+                    <img src="./assets/img/bookstor1.jpg" style="width: 150px;height: 100px;">
                   </section>
                   <section
                     class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
@@ -315,7 +315,7 @@
                   <section
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
-                    <img src="./assets/img/lifestyle.jpg" style="width: 149px;">
+                    <img src="./assets/img/lifestyle.jpg" style="width: 150px;height: 100px;">
                   </section>
                   <section
                     class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
@@ -349,7 +349,7 @@
                   <section
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
-                  <img src="./assets/img/food.jpg" style="width: 149px;">
+                  <img src="./assets/img/food.jpg" style="width: 150px;height: 100px;">
                   <!-- <img src="./assets/img/food1.jpg" style="width: 149px;"> -->
                 </section>
                   <section
