--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
                       <i class="fab fa-linkedin"></i>
                     </a>
                     <a style="color: white;"
+                    href="https://billodiallonet.medium.com/"
+                    role="button"
+                    class="btn"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    data-toggle="tooltip"
+                    data-placement="bottom"
+                    title="Medium"
+                  >
+                    <i class="fab fa-medium"></i>
+                  </a>
+                    <a style="color: white;"
                       href="#"
                       role="button"
                       class="btn"
@@ -864,6 +876,19 @@
           
         >
           <i class="fas fa-envelope-square"></i>
+        </a>
+
+        <a
+          href="https://billodiallonet.medium.com/"
+          role="button"
+          class="btn"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title=""
+          data-original-title="Medium"
+          
+        >
+          <i class="fab fa-medium"></i>
         </a>
       </aside>
       </div>
