--- a/index.html
+++ b/index.html
@@ -908,10 +908,10 @@
               over six months writing code and building real applications. 
               I learned HTML, CSS, JavaScript, Python, Angular, Django, Django REST API, PostgreSQL. I specialized in web development.
               I can work under tight deadlines and deliver expected results while integrating easily into teams with people from all over the world.
-              I can convert business needs into software solutions.A year later I joined Microverse where I spent 1300 hours.
-              Today I can Communicate effectively with both technical and non-technical customers, mentoring while being self-motivated.
+              I can convert business needs into software solutions.
+              A year later I joined Microverse where I spent 1300 hours. Today I can communicate effectively with both technical and non-technical customers, mentoring while being self-motivated.
       
-             I am currently open to work opportunities that provide personal and technical growth, mentorship, learning experience 
+              Currently open to work opportunities that provide personal and technical growth, mentorship, learning experience 
              as an individual and a professional.
              I think technology is playing an increasingly significant role and is a growing patchwork of entrepreneurs.<br>
              Bilingual: French and English.<br>
