--- a/index.html
+++ b/index.html
@@ -895,11 +895,11 @@
       </div>
 
      
-      <section  id="about">
+      <section class="" id="about">
         <div class="container text-center ">
           <div class="row">
             <div class="mx-3">
-              <p class="lead mb-5"> 
+              <div style="margin: 10px;   text-align: justify;"> 
                 <h3>Hello My name's Billo</h3>
     
               I am passionate about building web applications.
@@ -915,6 +915,7 @@
              as an individual and a professional.
              I think technology is playing an increasingly significant role and is a growing patchwork of entrepreneurs.<br>
              Bilingual: French and English.<br>
+              </div>
                 <br><br>
             </div>
           </div>
