--- a/index.html
+++ b/index.html
@@ -899,8 +899,8 @@
         <div class="container text-center ">
           <div class="row">
             <div class="mx-3">
-              <div style="margin: 23px;   text-align: justify;"> 
-                <h3>Hello My name's Billo</h3>
+              <div style="margin: 25px;   text-align: justify;"> 
+                <h3 class="text-center">Hello My name's Billo</h3>
     
               I am passionate about building web applications.
               Before moving to software development, I have a background in Networking and systems.
