Add BOOK API,remove weather app

--- a/index.html
+++ b/index.html
@@ -266,29 +266,22 @@
                   <section
                     class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
                   >
-                  <h6 style="font-weight: 800;font-size: 18px;">Weather App - Javascript</h6>
+                  <h6 style="font-weight: 800;font-size: 18px;">BOOK API </h6>
                     <ul>
                       <li>
-                        Weather Application in JavaScript(and Webpack) is a
-                        practice project, which includes managing the
-                        dynamically DOM manipulation.I used Javascript, HTML5,
-                        CSS3, Bootsrap and Webpack to implement it
+                        BOOKS API — In this project, we're setting up a simple Rails API-only-application. Rails API-only-applications are 
+                        slimmed down compared to traditional Rails web applications
+                       Built with: (Ruby, Ruby on Rails, RSpec-Rails for testing with action  CRUD).
                       </li>
 
                       <li>
                         <a
-                          href="https://github.com/billodiallo/Weather-app"
+                          href="https://github.com/billodiallo/api3"
                           target="_blank"
                           ><i class="fab fa-github"></i> GitHub</a
                         >
                       </li>
-                      <li>
-                        <a
-                          href="billodiallo.github.io/weather-app/"
-                          target="_blank"
-                          ><i class="fab fa-internet-explorer"></i> Live Link</a
-                        >
-                      </li>
+                      
                     </ul>
                   </section>
                 </div>
@@ -343,16 +336,9 @@
 
                       <li>
                         <a
-                          href="https://polar-woodland-81679.herokuapp.com/"
-                          target="_blank"
-                          ><i class="fab fa-github"></i> GitHub</a
-                        >
-                      </li>
-                      <li>
-                        <a
                           href="https://github.com/billodiallo/billodiallo-lifestyle_articles"
                           target="_blank"
-                          ><i class="fab fa-internet-explorer"></i> Live Link</a
+                          ><i class="fab fa-internet-explorer"></i> Github</a
                         >
                       </li>
                     </ul>
@@ -363,7 +349,7 @@
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
                   <img src="./assets/img/food.jpg" style="width: 150px;height: 100px;">
-                  <!-- <img src="./assets/img/food1.jpg" style="width: 149px;"> -->
+                  
                 </section>
                   <section
                     class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
