Remove unuse folders

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                   <section
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
-                  <img src="./assets/img/sss1.JPG" style="width: 150px;height: 100px;">
+                  <img src="./assets/img/api-crud.JPG" style="width: 150px;height: 100px;">
                   <!-- <img src="./assets/img/weatherappf.JPG" style="width: 149px;"> -->
 
                   </section>
