--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                   <section
                     class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 edu-name"
                   >
-                  <img src="./assets/img/food.jpg" style="width: 150px;height: 100px;">
+                  <img src="./assets/img/event-cap.JPG" style="width: 150px;height: 100px;">
                   
                 </section>
                 <section
@@ -393,7 +393,7 @@
                     <header class="company-name">Microverse</header>
                     <main class="job-role">Code Reviewer</main>
                     <footer>
-                      Sep 2020 to Present<br />
+                      Fevrier 2021 to Present<br />
                       Remote
                     </footer>
                   </section>
