--- a/index.html
+++ b/index.html
@@ -388,10 +388,50 @@
               <main class="container">
                 <div class="row">
                   <section
-                    class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 job-name"
+                   class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 job-name"
                   >
                     <header class="company-name">Microverse</header>
                     <main class="job-role">Code Reviewer</main>
+                    <footer>
+                      September 2021 to Present<br />
+                      Remote
+                    </footer>
+                  </section>
+                  <section
+                    class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 job-description"
+                  >
+                    <ul>
+                      <li>
+                        <a
+                          href="https://www.microverse.org/"
+                          target="_blank"
+                          rel="noopener noreferrer"
+                          >Microverse</a
+                        >
+                        is a global school for remote software developers where
+                        students learn through remote pair programming and don't
+                        pay anything until they get a job.
+                      </li>
+                      <li>
+                        Responsibilities:<br />
+                        ● Performing coding reviews for students in the Ruby, Ruby on Rails, JavaScript, React, HTML & CSS curriculum from all
+                        over the world.<br />
+                        ● Providing support through professional assistance
+                        platforms Zoom and Slack as they needed extra support
+                        during their projects.
+                        <br />
+                      </li>
+                    </ul>
+                  </section>
+                
+            <!-- job #1 -->
+
+<!-- job #2 -->
+<section
+                    class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 job-name"
+                  >
+                    <header class="company-name">Microverse</header>
+                    <main class="job-role">Technical Support Engineer and Mentor - Remote - United States </main>
                     <footer>
                       Fevrier 2021 to Present<br />
                       Remote
@@ -423,10 +463,12 @@
                       </li>
                     </ul>
                   </section>
+
+                <!-- job #2 -->
                 </div>
               </main>
             </article>
-            <!-- job #1 -->
+            <!-- job #3 -->
             <article>
               <main class="container">
                 <div class="row">
@@ -470,7 +512,9 @@
                 </div>
               </main>
             </article>
-            <!-- job #2 -->
+            <!-- job #3 -->
+
+            <!-- job #4  start section-->
             <article>
               <main class="container">
                 <div class="row">
@@ -503,7 +547,9 @@
                 </div>
               </main>
             </article>
-            <!-- job #3 -->
+            <!-- job #4 end section -->
+
+             <!-- job #5 end section -->
             <article>
               <main class="container">
                 <div class="row">
@@ -547,6 +593,8 @@
             <header class="section-header" id="experience-header">
               <i></i>Volunteer Experience
             </header>
+               <!-- job #5 end section -->
+               
             <!-- Volunteer Experience -->
             <article>
               <main class="container">
