Social media app

--- a/index.html
+++ b/index.html
@@ -354,18 +354,25 @@
                 <section
                 class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 edu-description"
               >
-              <h6 style="font-weight: 800;font-size: 18px;">Private-events </h6>
+              <h6 style="font-weight: 800;font-size: 18px;">Social media App </h6>
                 <ul>
                   <li>
-                   Private-events—  In this project we built a site similar to a private Eventbrite which allows users to create events and then manage user signups. Users can create events and join other events. Events take place at a specific date and at a location
-                      Built with: (Ruby, Ruby on Rails, devise gem ,Rubocop, Stylelint, test with rspec )
+                    This repo includes initial code for social media app with basic styling where user Sign up, Sign in ,send friend request, accept friend request,display user.
+                    Built with: (Ruby, Ruby on Rails,Rubocop, Stylelint,Postgresql, rspec-rails, cloudinary)
                   </li>
 
                   <li>
                     <a
-                      href="https://github.com/billodiallo/private-events"
+                      href="https://github.com/billodiallo/social-media_app"
                       target="_blank"
                       ><i class="fab fa-github"></i> GitHub</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://peaceful-meadow-89445.herokuapp.com/users/sign_in"
+                      target="_blank"
+                      ><i class="fab fa-github"></i> Live link</a
                     >
                   </li>
                   
